fix overflow

--- a/packages/ui/src/App.css
+++ b/packages/ui/src/App.css
@@ -37,3 +37,8 @@
     transform: rotate(360deg);
   }
 }
+
+
+ul {
+  padding-left: 20px;
+}
